# getlrc

./: Cargo.toml  README.md  install.sh
src/: env.rs  install.rs  lib.rs  main.rs  messages.rs  paths.rs  session.rs  worker.rs
src/api/: mod.rs  types.rs
src/cache/: mod.rs  signature.rs
src/scanner/: clean.rs  metadata.rs  mod.rs  parallel.rs
src/tui/: mod.rs  state.rs  ui.rs  widgets.rs
