[package]
name = "getlrc"
version = "0.2.0"
edition = "2021"
description = "Automated lyrics downloader for music libraries using lrclib.net API"
license = "MIT"
authors = ["Kevin"]
repository = "https://github.com/yourusername/getlrc"

[[bin]]
name = "getlrc"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Audio metadata
lofty = "0.22"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Filesystem
walkdir = "2.5"
jwalk = "0.8"
dirs = "5.0"

# Rate limiting
governor = "0.6"


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.24.0"
